--- a/package.json
+++ b/package.json
@@ -22,14 +22,15 @@
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
-    "expo": "~52.0.24",
+    "check": "^1.0.0",
+    "expo": "~52.0.30",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
     "expo-image": "~2.0.3",
     "expo-linking": "~7.0.3",
-    "expo-router": "~4.0.16",
+    "expo-router": "^3.1.0",
     "expo-splash-screen": "^0.29.19",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
@@ -44,7 +45,8 @@
     "react-native-screens": "~4.4.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "undefined": "\\"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
